chore: #1346: sonar